Remove uses of number class constructors (#416)
Signed-off-by Martin Davis <mtnclimb@gmail.com>